chore: clean up tokens

--- a/packages/web/src/components/button.module.css
+++ b/packages/web/src/components/button.module.css
@@ -9,7 +9,7 @@
 }
 .storybook-button--primary {
   color: white;
-  background-color: var(--auroraColorsBlue500);
+  background-color: var(--aurora-ref-colors-blue-500);
 }
 .storybook-button--secondary {
   color: #333;
