--- a/packages/tokens/src/lib/tokens.css
+++ b/packages/tokens/src/lib/tokens.css
@@ -1,136 +1,140 @@
 :root {
-  --auroraDimensionScale: 2px;
-  --auroraDimensionXs: 4px;
-  --auroraDimensionSm: 8px;
-  --auroraDimensionMd: 16px;
-  --auroraDimensionLg: 32px;
-  --auroraDimensionXl: 64px;
-  --auroraSpacingXs: 4px;
-  --auroraSpacingSm: 8px;
-  --auroraSpacingMd: 16px;
-  --auroraSpacingLg: 32px;
-  --auroraSpacingXl: 64px;
-  --auroraSpacingMultiValue: 8px 64px; /* You can have multiple values in a single spacing token. Read more on these: https://docs.tokens.studio/available-tokens/spacing-tokens#multi-value-spacing-tokens */
-  --auroraBorderRadiusSm: 4px;
-  --auroraBorderRadiusLg: 8px;
-  --auroraBorderRadiusXl: 16px;
-  --auroraBorderRadiusMultiValue: 4px 8px; /* You can have multiple values in a single radius token. Read more on these: https://docs.tokens.studio/available-tokens/border-radius-tokens#single--multiple-values */
-  --auroraOpacityLow: 0.1;
-  --auroraOpacityMd: 0.5;
-  --auroraOpacityHigh: 0.9;
-  --auroraFontFamiliesHeading: Inter;
-  --auroraFontFamiliesBody: Roboto;
-  --auroraLineHeightsHeading: 1.1;
-  --auroraLineHeightsBody: 1.4;
-  --auroraLetterSpacingDefault: 0;
-  --auroraLetterSpacingIncreased: 1.5em;
-  --auroraLetterSpacingDecreased: -0.05em;
-  --auroraParagraphSpacingH1: 32;
-  --auroraParagraphSpacingH2: 26;
-  --auroraFontWeightsHeadingRegular: 400;
-  --auroraFontWeightsHeadingBold: 700;
-  --auroraFontWeightsBodyRegular: 400;
-  --auroraFontWeightsBodyBold: 700;
-  --auroraFontSizesH1: 48.829px;
-  --auroraFontSizesH2: 39.063px;
-  --auroraFontSizesH3: 31.25px;
-  --auroraFontSizesH4: 25px;
-  --auroraFontSizesH5: 20px;
-  --auroraFontSizesH6: 16px;
-  --auroraFontSizesBody: 16px;
-  --auroraFontSizesSm: 13.6px;
-  --auroraFontSizesXs: 10.4px;
-  --auroraExampleShadow: inset 0 4px 10px 0 rgba(0,0,0,0.4);
-  --auroraColorsBlack: #000000;
-  --auroraColorsWhite: #ffffff;
-  --auroraColorsGray100: #f7fafc;
-  --auroraColorsGray200: #edf2f7;
-  --auroraColorsGray300: #e2e8f0;
-  --auroraColorsGray400: #cbd5e0;
-  --auroraColorsGray500: #a0aec0;
-  --auroraColorsGray600: #718096;
-  --auroraColorsGray700: #4a5568;
-  --auroraColorsGray800: #2d3748;
-  --auroraColorsGray900: #1a202c;
-  --auroraColorsRed100: hsl(0 87.8% 80.7%);
-  --auroraColorsRed200: hsl(0 87.8% 77.5%);
-  --auroraColorsRed300: hsl(0 87.8% 74.3%);
-  --auroraColorsRed400: hsl(0 87.8% 71.1%);
-  --auroraColorsRed500: #f56565;
-  --auroraColorsRed600: hsl(0 87.8% 61.1%);
-  --auroraColorsRed700: hsl(0 87.8% 54.3%);
-  --auroraColorsRed800: hsl(0 87.8% 47.5%);
-  --auroraColorsRed900: hsl(0 87.8% 40.7%);
-  --auroraColorsOrange100: #fffaf0;
-  --auroraColorsOrange200: #feebc8;
-  --auroraColorsOrange300: #fbd38d;
-  --auroraColorsOrange400: #f6ad55;
-  --auroraColorsOrange500: #ed8936;
-  --auroraColorsOrange600: #dd6b20;
-  --auroraColorsOrange700: #c05621;
-  --auroraColorsOrange800: #9c4221;
-  --auroraColorsOrange900: #7b341e;
-  --auroraColorsYellow100: #fffff0;
-  --auroraColorsYellow200: #fefcbf;
-  --auroraColorsYellow300: #faf089;
-  --auroraColorsYellow400: #f6e05e;
-  --auroraColorsYellow500: #ecc94b;
-  --auroraColorsYellow600: #d69e2e;
-  --auroraColorsYellow700: #b7791f;
-  --auroraColorsYellow800: #975a16;
-  --auroraColorsYellow900: #744210;
-  --auroraColorsGreen100: #f0fff4;
-  --auroraColorsGreen200: #c6f6d5;
-  --auroraColorsGreen300: #9ae6b4;
-  --auroraColorsGreen400: #68d391;
-  --auroraColorsGreen500: #48bb78;
-  --auroraColorsGreen600: #38a169;
-  --auroraColorsGreen700: #2f855a;
-  --auroraColorsGreen800: #276749;
-  --auroraColorsGreen900: #22543d;
-  --auroraColorsTeal100: #e6fffa;
-  --auroraColorsTeal200: #b2f5ea;
-  --auroraColorsTeal300: #81e6d9;
-  --auroraColorsTeal400: #4fd1c5;
-  --auroraColorsTeal500: #38b2ac;
-  --auroraColorsTeal600: #319795;
-  --auroraColorsTeal700: #2c7a7b;
-  --auroraColorsTeal800: #285e61;
-  --auroraColorsTeal900: #234e52;
-  --auroraColorsBlue100: #ebf8ff;
-  --auroraColorsBlue200: #bee3f8;
-  --auroraColorsBlue300: #90cdf4;
-  --auroraColorsBlue400: #63b3ed;
-  --auroraColorsBlue500: #4299e1;
-  --auroraColorsBlue600: #3182ce;
-  --auroraColorsBlue700: #2b6cb0;
-  --auroraColorsBlue800: #2c5282;
-  --auroraColorsBlue900: #2a4365;
-  --auroraColorsIndigo100: #ebf4ff;
-  --auroraColorsIndigo200: #c3dafe;
-  --auroraColorsIndigo300: #a3bffa;
-  --auroraColorsIndigo400: #7f9cf5;
-  --auroraColorsIndigo500: #667eea;
-  --auroraColorsIndigo600: #5a67d8;
-  --auroraColorsIndigo700: #4c51bf;
-  --auroraColorsIndigo800: #434190;
-  --auroraColorsIndigo900: #3c366b;
-  --auroraColorsPurple100: #faf5ff;
-  --auroraColorsPurple200: #e9d8fd;
-  --auroraColorsPurple300: #d6bcfa;
-  --auroraColorsPurple400: #b794f4;
-  --auroraColorsPurple500: #9f7aea;
-  --auroraColorsPurple600: #805ad5;
-  --auroraColorsPurple700: #6b46c1;
-  --auroraColorsPurple800: #553c9a;
-  --auroraColorsPurple900: #44337a;
-  --auroraColorsPink100: #fff5f8;
-  --auroraColorsPink200: #fed7e2;
-  --auroraColorsPink300: #fbb6ce;
-  --auroraColorsPink400: #f687b3;
-  --auroraColorsPink500: #ed64a6;
-  --auroraColorsPink600: #d53f8c;
-  --auroraColorsPink700: #b83280;
-  --auroraColorsPink800: #97266d;
-  --auroraColorsPink900: #702459;
+  --aurora-ref-example-shadow: inset 0 4px 10px 0 rgba(0,0,0,0.4);
+  --aurora-ref-font-sizes-body: 16px;
+  --aurora-ref-font-weights-body-bold: 700;
+  --aurora-ref-font-weights-body-regular: 400;
+  --aurora-ref-font-weights-heading-bold: 700;
+  --aurora-ref-font-weights-heading-regular: 400;
+  --aurora-ref-paragraph-spacing-h2: 26;
+  --aurora-ref-paragraph-spacing-h1: 32;
+  --aurora-ref-letter-spacing-decreased: -0.05em;
+  --aurora-ref-letter-spacing-increased: 1.5em;
+  --aurora-ref-letter-spacing-default: 0;
+  --aurora-ref-line-heights-body: 1.4;
+  --aurora-ref-line-heights-heading: 1.1;
+  --aurora-ref-font-families-body: Roboto;
+  --aurora-ref-font-families-heading: Inter;
+  --aurora-ref-opacity-high: 0.9;
+  --aurora-ref-opacity-md: 0.5;
+  --aurora-ref-opacity-low: 0.1;
+  --aurora-ref-border-radius-xl: 16px;
+  --aurora-ref-border-radius-lg: 8px;
+  --aurora-ref-border-radius-sm: 4px;
+  --aurora-ref-dimension-xs: 4px;
+  --aurora-ref-dimension-scale: 2px;
+  --aurora-ref-colors-pink-900: #702459;
+  --aurora-ref-colors-pink-800: #97266d;
+  --aurora-ref-colors-pink-700: #b83280;
+  --aurora-ref-colors-pink-600: #d53f8c;
+  --aurora-ref-colors-pink-500: #ed64a6;
+  --aurora-ref-colors-pink-400: #f687b3;
+  --aurora-ref-colors-pink-300: #fbb6ce;
+  --aurora-ref-colors-pink-200: #fed7e2;
+  --aurora-ref-colors-pink-100: #fff5f8;
+  --aurora-ref-colors-purple-900: #44337a;
+  --aurora-ref-colors-purple-800: #553c9a;
+  --aurora-ref-colors-purple-700: #6b46c1;
+  --aurora-ref-colors-purple-600: #805ad5;
+  --aurora-ref-colors-purple-500: #9f7aea;
+  --aurora-ref-colors-purple-400: #b794f4;
+  --aurora-ref-colors-purple-300: #d6bcfa;
+  --aurora-ref-colors-purple-200: #e9d8fd;
+  --aurora-ref-colors-purple-100: #faf5ff;
+  --aurora-ref-colors-indigo-900: #3c366b;
+  --aurora-ref-colors-indigo-800: #434190;
+  --aurora-ref-colors-indigo-700: #4c51bf;
+  --aurora-ref-colors-indigo-600: #5a67d8;
+  --aurora-ref-colors-indigo-500: #667eea;
+  --aurora-ref-colors-indigo-400: #7f9cf5;
+  --aurora-ref-colors-indigo-300: #a3bffa;
+  --aurora-ref-colors-indigo-200: #c3dafe;
+  --aurora-ref-colors-indigo-100: #ebf4ff;
+  --aurora-ref-colors-blue-900: #2a4365;
+  --aurora-ref-colors-blue-800: #2c5282;
+  --aurora-ref-colors-blue-700: #2b6cb0;
+  --aurora-ref-colors-blue-600: #3182ce;
+  --aurora-ref-colors-blue-500: #4299e1;
+  --aurora-ref-colors-blue-400: #63b3ed;
+  --aurora-ref-colors-blue-300: #90cdf4;
+  --aurora-ref-colors-blue-200: #bee3f8;
+  --aurora-ref-colors-blue-100: #ebf8ff;
+  --aurora-ref-colors-teal-900: #234e52;
+  --aurora-ref-colors-teal-800: #285e61;
+  --aurora-ref-colors-teal-700: #2c7a7b;
+  --aurora-ref-colors-teal-600: #319795;
+  --aurora-ref-colors-teal-500: #38b2ac;
+  --aurora-ref-colors-teal-400: #4fd1c5;
+  --aurora-ref-colors-teal-300: #81e6d9;
+  --aurora-ref-colors-teal-200: #b2f5ea;
+  --aurora-ref-colors-teal-100: #e6fffa;
+  --aurora-ref-colors-green-900: #22543d;
+  --aurora-ref-colors-green-800: #276749;
+  --aurora-ref-colors-green-700: #2f855a;
+  --aurora-ref-colors-green-600: #38a169;
+  --aurora-ref-colors-green-500: #48bb78;
+  --aurora-ref-colors-green-400: #68d391;
+  --aurora-ref-colors-green-300: #9ae6b4;
+  --aurora-ref-colors-green-200: #c6f6d5;
+  --aurora-ref-colors-green-100: #f0fff4;
+  --aurora-ref-colors-yellow-900: #744210;
+  --aurora-ref-colors-yellow-800: #975a16;
+  --aurora-ref-colors-yellow-700: #b7791f;
+  --aurora-ref-colors-yellow-600: #d69e2e;
+  --aurora-ref-colors-yellow-500: #ecc94b;
+  --aurora-ref-colors-yellow-400: #f6e05e;
+  --aurora-ref-colors-yellow-300: #faf089;
+  --aurora-ref-colors-yellow-200: #fefcbf;
+  --aurora-ref-colors-yellow-100: #fffff0;
+  --aurora-ref-colors-orange-900: #7b341e;
+  --aurora-ref-colors-orange-800: #9c4221;
+  --aurora-ref-colors-orange-700: #c05621;
+  --aurora-ref-colors-orange-600: #dd6b20;
+  --aurora-ref-colors-orange-500: #ed8936;
+  --aurora-ref-colors-orange-400: #f6ad55;
+  --aurora-ref-colors-orange-300: #fbd38d;
+  --aurora-ref-colors-orange-200: #feebc8;
+  --aurora-ref-colors-orange-100: #fffaf0;
+  --aurora-ref-colors-red-900: hsl(0 87.8% 40.7%);
+  --aurora-ref-colors-red-800: hsl(0 87.8% 47.5%);
+  --aurora-ref-colors-red-700: hsl(0 87.8% 54.3%);
+  --aurora-ref-colors-red-600: hsl(0 87.8% 61.1%);
+  --aurora-ref-colors-red-500: #f56565;
+  --aurora-ref-colors-red-400: hsl(0 87.8% 71.1%);
+  --aurora-ref-colors-red-300: hsl(0 87.8% 74.3%);
+  --aurora-ref-colors-red-200: hsl(0 87.8% 77.5%);
+  --aurora-ref-colors-red-100: hsl(0 87.8% 80.7%);
+  --aurora-ref-colors-gray-900: #1a202c;
+  --aurora-ref-colors-gray-800: #2d3748;
+  --aurora-ref-colors-gray-700: #4a5568;
+  --aurora-ref-colors-gray-600: #718096;
+  --aurora-ref-colors-gray-500: #a0aec0;
+  --aurora-ref-colors-gray-400: #cbd5e0;
+  --aurora-ref-colors-gray-300: #e2e8f0;
+  --aurora-ref-colors-gray-200: #edf2f7;
+  --aurora-ref-colors-gray-100: #f7fafc;
+  --aurora-ref-colors-white: #ffffff;
+  --aurora-ref-colors-black: #000000;
+  --aurora-ref-font-sizes-xs: var(--aurora-ref-font-sizes-body) * 0.65;
+  --aurora-ref-font-sizes-sm: var(--aurora-ref-font-sizes-body) * 0.85;
+  --aurora-ref-font-sizes-h6: var(--aurora-ref-font-sizes-body) * 1;
+  --aurora-ref-border-radius-multi-value: var(--aurora-ref-border-radius-sm) var(--aurora-ref-border-radius-lg); /* You can have multiple values in a single radius token. Read more on these: https://docs.tokens.studio/available-tokens/border-radius-tokens#single--multiple-values */
+  --aurora-ref-spacing-xs: var(--aurora-ref-dimension-xs);
+  --aurora-ref-dimension-sm: var(--aurora-ref-dimension-xs) * var(--aurora-ref-dimension-scale);
+  --aurora-light-text: var(--aurora-ref-colors-black);
+  --aurora-light-background: var(--aurora-ref-colors-white);
+  --aurora-dark-text: var(--aurora-ref-colors-white);
+  --aurora-dark-background: var(--aurora-ref-colors-red-500);
+  --aurora-ref-font-sizes-h5: var(--aurora-ref-font-sizes-h6) * 1.25;
+  --aurora-ref-spacing-multi-value: var(--aurora-ref-dimension-sm) var(--aurora-ref-dimension-xl); /* You can have multiple values in a single spacing token. Read more on these: https://docs.tokens.studio/available-tokens/spacing-tokens#multi-value-spacing-tokens */
+  --aurora-ref-spacing-sm: var(--aurora-ref-dimension-sm);
+  --aurora-ref-dimension-md: var(--aurora-ref-dimension-sm) * var(--aurora-ref-dimension-scale);
+  --aurora-ref-font-sizes-h4: var(--aurora-ref-font-sizes-h5) * 1.25;
+  --aurora-ref-spacing-md: var(--aurora-ref-dimension-md);
+  --aurora-ref-dimension-lg: var(--aurora-ref-dimension-md) * var(--aurora-ref-dimension-scale);
+  --aurora-ref-font-sizes-h3: var(--aurora-ref-font-sizes-h4) * 1.25;
+  --aurora-ref-spacing-lg: var(--aurora-ref-dimension-lg);
+  --aurora-ref-dimension-xl: var(--aurora-ref-dimension-lg) * var(--aurora-ref-dimension-scale);
+  --aurora-ref-font-sizes-h2: var(--aurora-ref-font-sizes-h3) * 1.25;
+  --aurora-ref-spacing-xl: var(--aurora-ref-dimension-xl);
+  --aurora-ref-font-sizes-h1: var(--aurora-ref-font-sizes-h2) * 1.25;
 }
