--- a/packages/tokens/src/lib/tokens.scss
+++ b/packages/tokens/src/lib/tokens.scss
@@ -1,134 +1,138 @@
-$auroraColorsPink900: #702459 !default;
-$auroraColorsPink800: #97266d !default;
-$auroraColorsPink700: #b83280 !default;
-$auroraColorsPink600: #d53f8c !default;
-$auroraColorsPink500: #ed64a6 !default;
-$auroraColorsPink400: #f687b3 !default;
-$auroraColorsPink300: #fbb6ce !default;
-$auroraColorsPink200: #fed7e2 !default;
-$auroraColorsPink100: #fff5f8 !default;
-$auroraColorsPurple900: #44337a !default;
-$auroraColorsPurple800: #553c9a !default;
-$auroraColorsPurple700: #6b46c1 !default;
-$auroraColorsPurple600: #805ad5 !default;
-$auroraColorsPurple500: #9f7aea !default;
-$auroraColorsPurple400: #b794f4 !default;
-$auroraColorsPurple300: #d6bcfa !default;
-$auroraColorsPurple200: #e9d8fd !default;
-$auroraColorsPurple100: #faf5ff !default;
-$auroraColorsIndigo900: #3c366b !default;
-$auroraColorsIndigo800: #434190 !default;
-$auroraColorsIndigo700: #4c51bf !default;
-$auroraColorsIndigo600: #5a67d8 !default;
-$auroraColorsIndigo500: #667eea !default;
-$auroraColorsIndigo400: #7f9cf5 !default;
-$auroraColorsIndigo300: #a3bffa !default;
-$auroraColorsIndigo200: #c3dafe !default;
-$auroraColorsIndigo100: #ebf4ff !default;
-$auroraColorsBlue900: #2a4365 !default;
-$auroraColorsBlue800: #2c5282 !default;
-$auroraColorsBlue700: #2b6cb0 !default;
-$auroraColorsBlue600: #3182ce !default;
-$auroraColorsBlue500: #4299e1 !default;
-$auroraColorsBlue400: #63b3ed !default;
-$auroraColorsBlue300: #90cdf4 !default;
-$auroraColorsBlue200: #bee3f8 !default;
-$auroraColorsBlue100: #ebf8ff !default;
-$auroraColorsTeal900: #234e52 !default;
-$auroraColorsTeal800: #285e61 !default;
-$auroraColorsTeal700: #2c7a7b !default;
-$auroraColorsTeal600: #319795 !default;
-$auroraColorsTeal500: #38b2ac !default;
-$auroraColorsTeal400: #4fd1c5 !default;
-$auroraColorsTeal300: #81e6d9 !default;
-$auroraColorsTeal200: #b2f5ea !default;
-$auroraColorsTeal100: #e6fffa !default;
-$auroraColorsGreen900: #22543d !default;
-$auroraColorsGreen800: #276749 !default;
-$auroraColorsGreen700: #2f855a !default;
-$auroraColorsGreen600: #38a169 !default;
-$auroraColorsGreen500: #48bb78 !default;
-$auroraColorsGreen400: #68d391 !default;
-$auroraColorsGreen300: #9ae6b4 !default;
-$auroraColorsGreen200: #c6f6d5 !default;
-$auroraColorsGreen100: #f0fff4 !default;
-$auroraColorsYellow900: #744210 !default;
-$auroraColorsYellow800: #975a16 !default;
-$auroraColorsYellow700: #b7791f !default;
-$auroraColorsYellow600: #d69e2e !default;
-$auroraColorsYellow500: #ecc94b !default;
-$auroraColorsYellow400: #f6e05e !default;
-$auroraColorsYellow300: #faf089 !default;
-$auroraColorsYellow200: #fefcbf !default;
-$auroraColorsYellow100: #fffff0 !default;
-$auroraColorsOrange900: #7b341e !default;
-$auroraColorsOrange800: #9c4221 !default;
-$auroraColorsOrange700: #c05621 !default;
-$auroraColorsOrange600: #dd6b20 !default;
-$auroraColorsOrange500: #ed8936 !default;
-$auroraColorsOrange400: #f6ad55 !default;
-$auroraColorsOrange300: #fbd38d !default;
-$auroraColorsOrange200: #feebc8 !default;
-$auroraColorsOrange100: #fffaf0 !default;
-$auroraColorsRed900: hsl(0 87.8% 40.7%) !default;
-$auroraColorsRed800: hsl(0 87.8% 47.5%) !default;
-$auroraColorsRed700: hsl(0 87.8% 54.3%) !default;
-$auroraColorsRed600: hsl(0 87.8% 61.1%) !default;
-$auroraColorsRed500: #f56565 !default;
-$auroraColorsRed400: hsl(0 87.8% 71.1%) !default;
-$auroraColorsRed300: hsl(0 87.8% 74.3%) !default;
-$auroraColorsRed200: hsl(0 87.8% 77.5%) !default;
-$auroraColorsRed100: hsl(0 87.8% 80.7%) !default;
-$auroraColorsGray900: #1a202c !default;
-$auroraColorsGray800: #2d3748 !default;
-$auroraColorsGray700: #4a5568 !default;
-$auroraColorsGray600: #718096 !default;
-$auroraColorsGray500: #a0aec0 !default;
-$auroraColorsGray400: #cbd5e0 !default;
-$auroraColorsGray300: #e2e8f0 !default;
-$auroraColorsGray200: #edf2f7 !default;
-$auroraColorsGray100: #f7fafc !default;
-$auroraColorsWhite: #ffffff !default;
-$auroraColorsBlack: #000000 !default;
-$auroraExampleShadow: inset 0 4px 10px 0 rgba(0,0,0,0.4) !default;
-$auroraFontSizesBody: 16px !default;
-$auroraFontWeightsBodyBold: 700 !default;
-$auroraFontWeightsBodyRegular: 400 !default;
-$auroraFontWeightsHeadingBold: 700 !default;
-$auroraFontWeightsHeadingRegular: 400 !default;
-$auroraParagraphSpacingH2: 26 !default;
-$auroraParagraphSpacingH1: 32 !default;
-$auroraLetterSpacingDecreased: -0.05em !default;
-$auroraLetterSpacingIncreased: 1.5em !default;
-$auroraLetterSpacingDefault: 0 !default;
-$auroraLineHeightsBody: 1.4 !default;
-$auroraLineHeightsHeading: 1.1 !default;
-$auroraFontFamiliesBody: Roboto !default;
-$auroraFontFamiliesHeading: Inter !default;
-$auroraOpacityHigh: 0.9 !default;
-$auroraOpacityMd: 0.5 !default;
-$auroraOpacityLow: 0.1 !default;
-$auroraBorderRadiusXl: 16px !default;
-$auroraBorderRadiusLg: 8px !default;
-$auroraBorderRadiusSm: 4px !default;
-$auroraDimensionXs: 4px !default;
-$auroraDimensionScale: 2px !default;
-$auroraFontSizesXs: $auroraFontSizesBody * 0.65 !default;
-$auroraFontSizesSm: $auroraFontSizesBody * 0.85 !default;
-$auroraFontSizesH6: $auroraFontSizesBody * 1 !default;
-$auroraBorderRadiusMultiValue: $auroraBorderRadiusSm $auroraBorderRadiusLg !default; // You can have multiple values in a single radius token. Read more on these: https://docs.tokens.studio/available-tokens/border-radius-tokens#single--multiple-values
-$auroraSpacingXs: $auroraDimensionXs !default;
-$auroraDimensionSm: $auroraDimensionXs * $auroraDimensionScale !default;
-$auroraFontSizesH5: $auroraFontSizesH6 * 1.25 !default;
-$auroraSpacingMultiValue: $auroraDimensionSm $auroraDimensionXl !default; // You can have multiple values in a single spacing token. Read more on these: https://docs.tokens.studio/available-tokens/spacing-tokens#multi-value-spacing-tokens
-$auroraSpacingSm: $auroraDimensionSm !default;
-$auroraDimensionMd: $auroraDimensionSm * $auroraDimensionScale !default;
-$auroraFontSizesH4: $auroraFontSizesH5 * 1.25 !default;
-$auroraSpacingMd: $auroraDimensionMd !default;
-$auroraDimensionLg: $auroraDimensionMd * $auroraDimensionScale !default;
-$auroraFontSizesH3: $auroraFontSizesH4 * 1.25 !default;
-$auroraSpacingLg: $auroraDimensionLg !default;
-$auroraDimensionXl: $auroraDimensionLg * $auroraDimensionScale !default;
-$auroraFontSizesH2: $auroraFontSizesH3 * 1.25 !default;
-$auroraSpacingXl: $auroraDimensionXl !default;
-$auroraFontSizesH1: $auroraFontSizesH2 * 1.25 !default;
+$auroraRefExampleShadow: inset 0 4px 10px 0 rgba(0,0,0,0.4) !default;
+$auroraRefFontSizesBody: 16px !default;
+$auroraRefFontWeightsBodyBold: 700 !default;
+$auroraRefFontWeightsBodyRegular: 400 !default;
+$auroraRefFontWeightsHeadingBold: 700 !default;
+$auroraRefFontWeightsHeadingRegular: 400 !default;
+$auroraRefParagraphSpacingH2: 26 !default;
+$auroraRefParagraphSpacingH1: 32 !default;
+$auroraRefLetterSpacingDecreased: -0.05em !default;
+$auroraRefLetterSpacingIncreased: 1.5em !default;
+$auroraRefLetterSpacingDefault: 0 !default;
+$auroraRefLineHeightsBody: 1.4 !default;
+$auroraRefLineHeightsHeading: 1.1 !default;
+$auroraRefFontFamiliesBody: Roboto !default;
+$auroraRefFontFamiliesHeading: Inter !default;
+$auroraRefOpacityHigh: 0.9 !default;
+$auroraRefOpacityMd: 0.5 !default;
+$auroraRefOpacityLow: 0.1 !default;
+$auroraRefBorderRadiusXl: 16px !default;
+$auroraRefBorderRadiusLg: 8px !default;
+$auroraRefBorderRadiusSm: 4px !default;
+$auroraRefDimensionXs: 4px !default;
+$auroraRefDimensionScale: 2px !default;
+$auroraRefColorsPink900: #702459 !default;
+$auroraRefColorsPink800: #97266d !default;
+$auroraRefColorsPink700: #b83280 !default;
+$auroraRefColorsPink600: #d53f8c !default;
+$auroraRefColorsPink500: #ed64a6 !default;
+$auroraRefColorsPink400: #f687b3 !default;
+$auroraRefColorsPink300: #fbb6ce !default;
+$auroraRefColorsPink200: #fed7e2 !default;
+$auroraRefColorsPink100: #fff5f8 !default;
+$auroraRefColorsPurple900: #44337a !default;
+$auroraRefColorsPurple800: #553c9a !default;
+$auroraRefColorsPurple700: #6b46c1 !default;
+$auroraRefColorsPurple600: #805ad5 !default;
+$auroraRefColorsPurple500: #9f7aea !default;
+$auroraRefColorsPurple400: #b794f4 !default;
+$auroraRefColorsPurple300: #d6bcfa !default;
+$auroraRefColorsPurple200: #e9d8fd !default;
+$auroraRefColorsPurple100: #faf5ff !default;
+$auroraRefColorsIndigo900: #3c366b !default;
+$auroraRefColorsIndigo800: #434190 !default;
+$auroraRefColorsIndigo700: #4c51bf !default;
+$auroraRefColorsIndigo600: #5a67d8 !default;
+$auroraRefColorsIndigo500: #667eea !default;
+$auroraRefColorsIndigo400: #7f9cf5 !default;
+$auroraRefColorsIndigo300: #a3bffa !default;
+$auroraRefColorsIndigo200: #c3dafe !default;
+$auroraRefColorsIndigo100: #ebf4ff !default;
+$auroraRefColorsBlue900: #2a4365 !default;
+$auroraRefColorsBlue800: #2c5282 !default;
+$auroraRefColorsBlue700: #2b6cb0 !default;
+$auroraRefColorsBlue600: #3182ce !default;
+$auroraRefColorsBlue500: #4299e1 !default;
+$auroraRefColorsBlue400: #63b3ed !default;
+$auroraRefColorsBlue300: #90cdf4 !default;
+$auroraRefColorsBlue200: #bee3f8 !default;
+$auroraRefColorsBlue100: #ebf8ff !default;
+$auroraRefColorsTeal900: #234e52 !default;
+$auroraRefColorsTeal800: #285e61 !default;
+$auroraRefColorsTeal700: #2c7a7b !default;
+$auroraRefColorsTeal600: #319795 !default;
+$auroraRefColorsTeal500: #38b2ac !default;
+$auroraRefColorsTeal400: #4fd1c5 !default;
+$auroraRefColorsTeal300: #81e6d9 !default;
+$auroraRefColorsTeal200: #b2f5ea !default;
+$auroraRefColorsTeal100: #e6fffa !default;
+$auroraRefColorsGreen900: #22543d !default;
+$auroraRefColorsGreen800: #276749 !default;
+$auroraRefColorsGreen700: #2f855a !default;
+$auroraRefColorsGreen600: #38a169 !default;
+$auroraRefColorsGreen500: #48bb78 !default;
+$auroraRefColorsGreen400: #68d391 !default;
+$auroraRefColorsGreen300: #9ae6b4 !default;
+$auroraRefColorsGreen200: #c6f6d5 !default;
+$auroraRefColorsGreen100: #f0fff4 !default;
+$auroraRefColorsYellow900: #744210 !default;
+$auroraRefColorsYellow800: #975a16 !default;
+$auroraRefColorsYellow700: #b7791f !default;
+$auroraRefColorsYellow600: #d69e2e !default;
+$auroraRefColorsYellow500: #ecc94b !default;
+$auroraRefColorsYellow400: #f6e05e !default;
+$auroraRefColorsYellow300: #faf089 !default;
+$auroraRefColorsYellow200: #fefcbf !default;
+$auroraRefColorsYellow100: #fffff0 !default;
+$auroraRefColorsOrange900: #7b341e !default;
+$auroraRefColorsOrange800: #9c4221 !default;
+$auroraRefColorsOrange700: #c05621 !default;
+$auroraRefColorsOrange600: #dd6b20 !default;
+$auroraRefColorsOrange500: #ed8936 !default;
+$auroraRefColorsOrange400: #f6ad55 !default;
+$auroraRefColorsOrange300: #fbd38d !default;
+$auroraRefColorsOrange200: #feebc8 !default;
+$auroraRefColorsOrange100: #fffaf0 !default;
+$auroraRefColorsRed900: hsl(0 87.8% 40.7%) !default;
+$auroraRefColorsRed800: hsl(0 87.8% 47.5%) !default;
+$auroraRefColorsRed700: hsl(0 87.8% 54.3%) !default;
+$auroraRefColorsRed600: hsl(0 87.8% 61.1%) !default;
+$auroraRefColorsRed500: #f56565 !default;
+$auroraRefColorsRed400: hsl(0 87.8% 71.1%) !default;
+$auroraRefColorsRed300: hsl(0 87.8% 74.3%) !default;
+$auroraRefColorsRed200: hsl(0 87.8% 77.5%) !default;
+$auroraRefColorsRed100: hsl(0 87.8% 80.7%) !default;
+$auroraRefColorsGray900: #1a202c !default;
+$auroraRefColorsGray800: #2d3748 !default;
+$auroraRefColorsGray700: #4a5568 !default;
+$auroraRefColorsGray600: #718096 !default;
+$auroraRefColorsGray500: #a0aec0 !default;
+$auroraRefColorsGray400: #cbd5e0 !default;
+$auroraRefColorsGray300: #e2e8f0 !default;
+$auroraRefColorsGray200: #edf2f7 !default;
+$auroraRefColorsGray100: #f7fafc !default;
+$auroraRefColorsWhite: #ffffff !default;
+$auroraRefColorsBlack: #000000 !default;
+$auroraRefFontSizesXs: $auroraRefFontSizesBody * 0.65 !default;
+$auroraRefFontSizesSm: $auroraRefFontSizesBody * 0.85 !default;
+$auroraRefFontSizesH6: $auroraRefFontSizesBody * 1 !default;
+$auroraRefBorderRadiusMultiValue: $auroraRefBorderRadiusSm $auroraRefBorderRadiusLg !default; // You can have multiple values in a single radius token. Read more on these: https://docs.tokens.studio/available-tokens/border-radius-tokens#single--multiple-values
+$auroraRefSpacingXs: $auroraRefDimensionXs !default;
+$auroraRefDimensionSm: $auroraRefDimensionXs * $auroraRefDimensionScale !default;
+$auroraLightText: $auroraRefColorsBlack !default;
+$auroraLightBackground: $auroraRefColorsWhite !default;
+$auroraDarkText: $auroraRefColorsWhite !default;
+$auroraDarkBackground: $auroraRefColorsRed500 !default;
+$auroraRefFontSizesH5: $auroraRefFontSizesH6 * 1.25 !default;
+$auroraRefSpacingMultiValue: $auroraRefDimensionSm $auroraRefDimensionXl !default; // You can have multiple values in a single spacing token. Read more on these: https://docs.tokens.studio/available-tokens/spacing-tokens#multi-value-spacing-tokens
+$auroraRefSpacingSm: $auroraRefDimensionSm !default;
+$auroraRefDimensionMd: $auroraRefDimensionSm * $auroraRefDimensionScale !default;
+$auroraRefFontSizesH4: $auroraRefFontSizesH5 * 1.25 !default;
+$auroraRefSpacingMd: $auroraRefDimensionMd !default;
+$auroraRefDimensionLg: $auroraRefDimensionMd * $auroraRefDimensionScale !default;
+$auroraRefFontSizesH3: $auroraRefFontSizesH4 * 1.25 !default;
+$auroraRefSpacingLg: $auroraRefDimensionLg !default;
+$auroraRefDimensionXl: $auroraRefDimensionLg * $auroraRefDimensionScale !default;
+$auroraRefFontSizesH2: $auroraRefFontSizesH3 * 1.25 !default;
+$auroraRefSpacingXl: $auroraRefDimensionXl !default;
+$auroraRefFontSizesH1: $auroraRefFontSizesH2 * 1.25 !default;
